feat:added two more pages

--- a/src/index.html
+++ b/src/index.html
@@ -396,12 +396,13 @@
       <div class="card-group">
         <div class="row row-cols-lg-3 gap-5 justify-content-center">
           <div
-            class="card col-lg-2 border-0 d-flex flex-column justify-content-center align-items-center py-2"
+            class="card col-lg-2 border-0 d-flex flex-column justify-content-center align-items-center py-2 py-lg-5"
           >
             <img
               src="./assets/images/choose-us-1.png"
               class="card-img-top"
               alt="..."
+              style="height: 140px"
             />
             <div class="card-body">
               <h5 class="card-title">See Optimazation</h5>
@@ -418,7 +419,7 @@
             </button>
           </div>
           <div
-            class="card col-lg-2 border-0 d-flex flex-column justify-content-center align-items-center py-2"
+            class="card col-lg-2 border-0 d-flex flex-column justify-content-center align-items-center py-2 py-lg-5"
           >
             <img
               src="./assets/images/choose-us-2.png"
@@ -440,7 +441,7 @@
             </button>
           </div>
           <div
-            class="card col-lg-2 border-0 d-flex flex-column justify-content-center align-items-center py-2"
+            class="card col-lg-2 border-0 d-flex flex-column justify-content-center align-items-center py-2 py-lg-5"
           >
             <img
               src="./assets/images/choose-us-3.png"
@@ -464,50 +465,123 @@
         </div>
       </div>
     </div>
-    <div class="container">
-      <div class="row row-cols-2">
-        <div class="col-lg-6">
-          <img src="./assets/images/need.png" class="w-75" />
+    <div class="container pt-lg-5">
+      <div class="row row-cols-1 row-cols-lg-2">
+        <div class="col-12 col-lg-6 py-5">
+          <img src="./assets/images/need.png" class="img-fluid" />
         </div>
-        <div class="col-lg-6">
-          <p>You make ask what SEO & why do you <span>Need It?</span></p>
+        <div class="col-12 col-lg-6 text-center text-lg-start">
+          <h2>
+            You make ask what<br />
+            SEO & why do you <span style="color: #6f77f1">Need It?</span>
+          </h2>
           <p>
             It is a long established fact that a reader will be distracted by
             the readable content .It is a long established fact that a reader
             .It is a long.
           </p>
-          <div class="d-flex">
-            <img src="./assets/images/need-icons.png" />
-            <div class="d-flex flex-column">
+          <div class="d-flex align-items-center gap-2 gap-lg-3 mb-1 mb-lg-3">
+            <div>
+              <img
+                src="./assets/images/need-icons.png"
+                style="width: 90px; height: 90px"
+              />
+            </div>
+            <div class="d-flex flex-column mb-lg-3 text-start">
               <h5>Social Media Marketing</h5>
               <p>
-                It is a long established fact that a reader will be<br />
-                distracted by the.
+                It is a long established fact that a reader will be distracted
+                by the.
               </p>
             </div>
           </div>
-          <div class="d-flex">
-            <img src="./assets/images/need-icons.png" />
-            <div class="d-flex flex-column">
+          <div class="d-flex align-items-center gap-2 gap-lg-3 mb-1 mb-lg-3">
+            <img
+              src="./assets/images/need-icons.png"
+              style="width: 90px; height: 90px"
+            />
+            <div class="d-flex flex-column text-start">
               <h5>Social Media Marketing</h5>
               <p>
-                It is a long established fact that a reader will be<br />
-                distracted by the.
+                It is a long established fact that a reader will be distracted
+                by the.
               </p>
             </div>
           </div>
-          <div class="d-flex">
-            <img src="./assets/images/need-icons.png" />
-            <div class="d-flex flex-column">
+          <div class="d-flex align-items-center gap-2 gap-lg-3 mb-1 mb-lg-3">
+            <img
+              src="./assets/images/need-icons.png"
+              style="width: 90px; height: 90px"
+            />
+            <div class="d-flex flex-column text-start">
               <h5>Social Media Marketing</h5>
               <p>
-                It is a long established fact that a reader will be<br />
-                distracted by the.
+                It is a long established fact that a reader will be distracted
+                by the.
               </p>
             </div>
           </div>
         </div>
       </div>
     </div>
+    <div class="container text-center py-5 px-5">
+      <div class="row border justify-content-center py-lg-2">
+        <div class="col-md-2">
+          <h2 class="display-4 text-secondary">86</h2>
+          <p class="text-muted">Happy Clients</p>
+        </div>
+        <div class="col-md-2">
+          <h2 class="display-4 text-secondary">86</h2>
+          <p class="text-muted">Happy Clients</p>
+        </div>
+        <div class="col-md-2">
+          <h2 class="display-4 text-secondary">86</h2>
+          <p class="text-muted">Happy Clients</p>
+        </div>
+        <div class="col-md-2">
+          <h2 class="display-4 text-secondary">86</h2>
+          <p class="text-muted">Happy Clients</p>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row row-cols-1 row-cols-lg-2">
+        <div class="col align-self-center">
+          <h2 class="display-5">
+            Check Your Website <span style="color: #6f77f1">Speed</span>
+          </h2>
+          <p>
+            It is a long established fact that a reader will be distracted by
+            the readable content .It is a long established fact that a reader
+            .It is a long.
+          </p>
+          <div class="d-flex flex-column flex-lg-row">
+            <input
+              type="text"
+              placeholder="Web URL"
+              class="form-control border-0 w-100 w-lg-auto mb-2 mb-lg-0 rounded-0"
+              style="background-color: #f2f2f2"
+            />
+            <input
+              type="text"
+              placeholder="Email Address"
+              class="form-control border-0 w-100 w-lg-auto mb-2 mb-lg-0 rounded-0"
+              style="background-color: #f2f2f2"
+            />
+
+            <button
+              class="btn btn-warning rounded-1 border-0 ms-lg-2 mb-2 mb-lg-0"
+              style="font-size: 24px; font-weight: 400"
+            >
+              Submit
+            </button>
+          </div>
+        </div>
+        <div class="col">
+          <img src="./assets/images/internet-speed.png" class="img-fluid" />
+        </div>
+      </div>
+    </div>
+    <div class="container"></div>
   </body>
 </html>
