--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
               />
             </span>
           </h1>
-          <p class="lead">
+          <p class="hero-body">
             It is a long established fact that a reader will be distracted by
             the readable content of a page when It is a long .It is a long
             established fact that a reader will be distracted by the readable
@@ -107,8 +107,7 @@
             will be distracted.
           </p>
           <button
-            class="btn btn-warning rounded-1 px-lg-3 border-0 mt-lg-4"
-            style="font-size: 24px; font-weight: 400"
+            class="btn btn-warning rounded-1 px-lg-3 border-0 mt-lg-4 hero-btn"
           >
             Get Started
           </button>
@@ -121,67 +120,69 @@
       </div>
     </div>
     <div class="container mt-5">
+      <!-- row-cols-1 row-cols-md-3 -->
+
       <div
-        class="row d-flex gap-3 justify-content-center justify-content-lg-between"
+        class="row d-flex flex-column flex-lg-row justify-content-center justify-content-lg-between"
       >
-        <div
-          class="card border-0 col-md-4 col-12"
-          style="width: 20rem; height: 15rem"
-        >
-          <div class="card-body">
-            <div class="d-flex gap-2 align-items-center">
-              <img
-                src="./assets/images/social-media.png"
-                style="width: 60px; height: 70px"
-              />
-              <h5 class="card-title">Social Media Management</h5>
-            </div>
+        <div class="col col-md-4">
+          <div class="card border-0 hero-cards">
+            <div class="card-body">
+              <div class="d-flex gap-2 align-items-center">
+                <img
+                  src="./assets/images/social-media.png"
+                  style="width: 60px; height: 70px"
+                />
+                <h5 class="card-title">Social Media Management</h5>
+              </div>
 
-            <p class="card-text">
-              It is a long established fact that a reader will be distracted by
-              the readable content .It is a long established fact that .
-            </p>
-            <p href="#" class="offset-11">→</p>
+              <p class="card-text">
+                It is a long established fact that a reader will be distracted
+                by the readable content .It is a long established fact that .
+                <br /><br />
+                <span class="offset-11">→</span>
+              </p>
+            </div>
           </div>
         </div>
-        <div
-          class="card border-0 col-md-4 col-12"
-          style="width: 20rem; height: 15rem"
-        >
-          <div class="card-body">
-            <div class="d-flex gap-2 align-items-center">
-              <img
-                src="./assets/images/browser.png"
-                style="width: 60px; height: 70px"
-              />
-              <h5 class="card-title">Email Management</h5>
-            </div>
+        <div class="col col-md-4">
+          <div class="card border-0 hero-cards">
+            <div class="card-body">
+              <div class="d-flex gap-2 align-items-center">
+                <img
+                  src="./assets/images/browser.png"
+                  style="width: 60px; height: 70px"
+                />
+                <h5 class="card-title">Email Management</h5>
+              </div>
 
-            <p class="card-text">
-              It is a long established fact that a reader will be distracted by
-              the readable content .It is a long established fact that .
-            </p>
-            <p href="#" class="offset-11">→</p>
+              <p class="card-text">
+                It is a long established fact that a reader will be distracted
+                by the readable content .It is a long established fact that .
+                <br /><br />
+                <span class="offset-11">→</span>
+              </p>
+            </div>
           </div>
         </div>
-        <div
-          class="card border-0 col-md-4 col-12"
-          style="width: 20rem; height: 15rem"
-        >
-          <div class="card-body">
-            <div class="d-flex gap-2 align-items-center">
-              <img
-                src="./assets/images/chart.png"
-                style="width: 60px; height: 70px"
-              />
-              <h5 class="card-title">SEO Management</h5>
-            </div>
+        <div class="col col-md-4">
+          <div class="card border-0 hero-cards">
+            <div class="card-body">
+              <div class="d-flex gap-2 align-items-center">
+                <img
+                  src="./assets/images/chart.png"
+                  style="width: 60px; height: 70px"
+                />
+                <h5 class="card-title">SEO Management</h5>
+              </div>
 
-            <p class="card-text">
-              It is a long established fact that a reader will be distracted by
-              the readable content .It is a long established fact that .
-            </p>
-            <p href="#" class="offset-11">→</p>
+              <p class="card-text">
+                It is a long established fact that a reader will be distracted
+                by the readable content .It is a long established fact that .
+                <br /><br />
+                <span class="offset-11">→</span>
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -280,8 +281,7 @@
     <div
       class="container-fluid mt-3"
       style="
-        background-image: url('./assets/images/vector-bg.png') no repeat,
-          #f2f2f2;
+        background-image: url('./assets/images/Group\ 678.svg');
         background-size: cover;
         background-position: center;
       "
@@ -531,16 +531,16 @@
           <p class="text-muted">Happy Clients</p>
         </div>
         <div class="col-md-2">
-          <h2 class="display-4 text-secondary">86</h2>
-          <p class="text-muted">Happy Clients</p>
+          <h2 class="display-4 text-secondary">118</h2>
+          <p class="text-muted">Projects Done</p>
         </div>
         <div class="col-md-2">
-          <h2 class="display-4 text-secondary">86</h2>
-          <p class="text-muted">Happy Clients</p>
+          <h2 class="display-4 text-secondary">6+</h2>
+          <p class="text-muted">Years Of Experience</p>
         </div>
         <div class="col-md-2">
-          <h2 class="display-4 text-secondary">86</h2>
-          <p class="text-muted">Happy Clients</p>
+          <h2 class="display-4 text-secondary">14</h2>
+          <p class="text-muted">National Awards</p>
         </div>
       </div>
     </div>
@@ -582,6 +582,272 @@
         </div>
       </div>
     </div>
-    <div class="container"></div>
+    <div
+      class="container-fluid text-center py-5"
+      style="background-color: #fafafa"
+    >
+      <h3>Our Plans</h3>
+      <p>Choose the right SEO for you</p>
+      <div class="card-group gap-lg-3 justify-content-center mb-lg-5">
+        <div class="row row-cols-lg-3 justify-content-center">
+          <div class="col-lg-4 w-80 w-lg-auto">
+            <div class="card border-0 my-card">
+              <div class="card-body">
+                <h5 class="card-title">Plus</h5>
+                <div class="card-text">
+                  <h6 style="font-size: 30px">
+                    45<span style="font-size: 14px">/Month</span><br />
+                  </h6>
+                  <p>408GB Bandwidth</p>
+                  <p>Business & Finance Analysing</p>
+                  <p>24 Hour Support</p>
+                  <p>Customer Management</p>
+                </div>
+                <button
+                  class="btn my-btn ms-lg-2 mb-2 mb-lg-0"
+                  style="font-size: 14px; font-weight: 400"
+                >
+                  Get Started
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 w-80 w-lg-auto">
+            <div class="card border-0 my-card">
+              <div class="card-body">
+                <h5 class="card-title">Beginner</h5>
+                <div class="card-text">
+                  <h6 style="font-size: 30px">
+                    45<span style="font-size: 14px">/Month</span><br />
+                  </h6>
+                  <p>408GB Bandwidth</p>
+                  <p>Business & Finance Analysing</p>
+                  <p>24 Hour Support</p>
+                  <p>Customer Management</p>
+                </div>
+                <button
+                  class="btn my-btn ms-lg-2 mb-2 mb-lg-0"
+                  style="font-size: 14px; font-weight: 400"
+                >
+                  Get Started
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 w-80 w-lg-auto">
+            <div class="card border-0 my-card">
+              <div class="card-body">
+                <h5 class="card-title">Advanced</h5>
+                <div class="card-text">
+                  <h6 style="font-size: 30px">
+                    45<span style="font-size: 14px">/Month</span><br />
+                  </h6>
+                  <p>408GB Bandwidth</p>
+                  <p>Business & Finance Analysing</p>
+                  <p>24 Hour Support</p>
+                  <p>Customer Management</p>
+                </div>
+                <button
+                  class="btn my-btn ms-lg-2 mb-2 mb-lg-0"
+                  style="font-size: 14px; font-weight: 400"
+                >
+                  Get Started
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div
+      class="container-fluid text-center"
+      style="margin-top: 78px; margin-bottom: 170px"
+    >
+      <h2 style="margin-bottom: 21px">
+        Our Expert Team <span style="color: #6f77f1">Members</span>
+      </h2>
+      <p style="margin-bottom: 64px">
+        It is a long established fact that a reader will be distracted by the
+        readable<br />
+        content .It is a long established fact that a reader
+      </p>
+      <div class="row justify-content-center">
+        <div class="col-lg-2">
+          <div class="card mb-3 mb-lg-0">
+            <img
+              class="card-img-top img-fluid mx-auto py-2"
+              src="./assets/images/person.png"
+              style="width: 131px; height: 131px"
+            />
+            <div class="card-body">
+              <h3>Muriel Whee</h3>
+              <p>Marketing Manager</p>
+              <img src="./assets/images/link.png" />
+              <img src="./assets/images/link.png" class="ms-3" />
+              <img src="./assets/images/link.png" class="ms-3" />
+              <img src="./assets/images/link.png" class="ms-3" />
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-2">
+          <div class="card mb-3 mb-lg-0">
+            <img
+              class="card-img-top img-fluid mx-auto py-2"
+              src="./assets/images/person.png"
+              style="width: 131px; height: 131px"
+            />
+            <div class="card-body">
+              <h3>Muriel Whee</h3>
+              <p>Marketing Manager</p>
+              <img src="./assets/images/link.png" />
+              <img src="./assets/images/link.png" class="ms-3" />
+              <img src="./assets/images/link.png" class="ms-3" />
+              <img src="./assets/images/link.png" class="ms-3" />
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-2">
+          <div class="card mb-3 mb-lg-0">
+            <img
+              class="card-img-top img-fluid mx-auto py-2"
+              src="./assets/images/person.png"
+              style="width: 131px; height: 131px"
+            />
+            <div class="card-body">
+              <h3>Muriel Whee</h3>
+              <p>Marketing Manager</p>
+              <img src="./assets/images/link.png" />
+              <img src="./assets/images/link.png" class="ms-3" />
+              <img src="./assets/images/link.png" class="ms-3" />
+              <img src="./assets/images/link.png" class="ms-3" />
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-2">
+          <div class="card">
+            <img
+              class="card-img-top img-fluid mx-auto py-2"
+              src="./assets/images/person.png"
+              style="width: 131px; height: 131px"
+            />
+            <div class="card-body">
+              <h3>Muriel Whee</h3>
+              <p>Marketing Manager</p>
+              <img src="./assets/images/link.png" />
+              <img src="./assets/images/link.png" class="ms-3" />
+              <img src="./assets/images/link.png" class="ms-3" />
+              <img src="./assets/images/link.png" class="ms-3" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container text-center">
+      <h3>Our Clients Say</h3>
+      <p>
+        It is a long established fact that a reader will be distracted<br />
+        by the readable content .It is a
+      </p>
+      <div class="row clients-review-container">
+        <div class="col-lg-4 clients-review">
+          <div class="card">
+            <div class="card-body">
+              <p>
+                It is a long established fact that a reader will be distracted
+                by the readable content .It is a long established fact that a
+                reader
+              </p>
+              <img
+                style="width: 50px; height: 50px"
+                src="./assets/images/person.png"
+              />
+              <p>Ship Builder</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 clients-review">
+          <div class="card">
+            <div class="card-body">
+              <p>
+                It is a long established fact that a reader will be distracted
+                by the readable content .It is a long established fact that a
+                reader
+              </p>
+              <img
+                style="width: 50px; height: 50px"
+                src="./assets/images/person.png"
+              />
+              <p>Ship Builder</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 clients-review">
+          <div class="card">
+            <div class="card-body">
+              <p>
+                It is a long established fact that a reader will be distracted
+                by the readable content .It is a long established fact that a
+                reader
+              </p>
+              <img
+                style="width: 50px; height: 50px"
+                src="./assets/images/person.png"
+              />
+              <p>Ship Builder</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 clients-review">
+          <div class="card">
+            <div class="card-body">
+              <p>
+                It is a long established fact that a reader will be distracted
+                by the readable content .It is a long established fact that a
+                reader
+              </p>
+              <img
+                style="width: 50px; height: 50px"
+                src="./assets/images/person.png"
+              />
+              <p>Ship Builder</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div
+      class="container text-center col-10 py-5 mt-2"
+      style="background-color: #fafafa"
+    >
+      <h2>Subscribe & find the perfect Cosmetics</h2>
+      <p class="">Enter your email and get updated new products & news</p>
+      <div
+        class="d-flex justify-content-center gap-2 flex-column flex-lg-row column-gap-1"
+        style="height: 57px"
+      >
+        <input class="rounded border-1" placeholder="Name" />
+        <input class="rounded border-1" placeholder="Email Address" />
+        <button
+          class="border-0 rounded"
+          style="background-color: #6f77f1; color: white"
+        >
+          Subscribe
+        </button>
+      </div>
+    </div>
+    <div class="container text-center mt-5">
+      <img src="./assets/images/nuvosa.png" class="img-fluid mb-4" />
+      <div class="row row-cols-2 row-cols-lg-5 justify-content-center mb-5">
+        <a class="col-1">Overview</a>
+        <a class="col-1">Pricing</a>
+        <a class="col-1">Careers</a>
+        <a class="col-1">Help</a>
+        <a class="col-1">Privacy</a>
+      </div>
+      <hr />
+      <p style="color: #828282; text-align: start">
+        Copyright © 2023 nuvosa, All rights reserved.
+      </p>
+    </div>
   </body>
 </html>
