--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
         </div>
 
         <div class="col-md-6 order-md-first">
-          <h1 class="display-4" style="font-weight: 700">
+          <h1 class="hero-section-h1">
             Increase your web<br />
             traffic with our
             <span class="d-inline-flex align-items-center">
@@ -120,11 +120,7 @@
       </div>
     </div>
     <div class="container mt-5">
-      <!-- row-cols-1 row-cols-md-3 -->
-
-      <div
-        class="row d-flex flex-column flex-lg-row justify-content-center justify-content-lg-between"
-      >
+      <div class="row d-flex flex-column flex-lg-row justify-content-center">
         <div class="col col-md-4">
           <div class="card border-0 hero-cards">
             <div class="card-body">
@@ -133,10 +129,12 @@
                   src="./assets/images/social-media.png"
                   style="width: 60px; height: 70px"
                 />
-                <h5 class="card-title">Social Media Management</h5>
+                <p class="card-title hero-card-heading">
+                  Social Media Management
+                </p>
               </div>
 
-              <p class="card-text">
+              <p class="card-text hero-card-body">
                 It is a long established fact that a reader will be distracted
                 by the readable content .It is a long established fact that .
                 <br /><br />
@@ -153,10 +151,10 @@
                   src="./assets/images/browser.png"
                   style="width: 60px; height: 70px"
                 />
-                <h5 class="card-title">Email Management</h5>
+                <h5 class="card-title hero-card-heading">Email Management</h5>
               </div>
 
-              <p class="card-text">
+              <p class="card-text hero-card-body">
                 It is a long established fact that a reader will be distracted
                 by the readable content .It is a long established fact that .
                 <br /><br />
@@ -173,10 +171,10 @@
                   src="./assets/images/chart.png"
                   style="width: 60px; height: 70px"
                 />
-                <h5 class="card-title">SEO Management</h5>
+                <h5 class="card-title hero-card-heading">SEO Management</h5>
               </div>
 
-              <p class="card-text">
+              <p class="card-text hero-card-body">
                 It is a long established fact that a reader will be distracted
                 by the readable content .It is a long established fact that .
                 <br /><br />
@@ -187,32 +185,28 @@
         </div>
       </div>
     </div>
-    <section class="container mt-5">
-      <h2>Optimising your <span style="color: #6f77f1">Website</span></h2>
-      <p class="col-lg-6">
+    <section class="container mt-5 optimise-container">
+      <p class="heading">
+        Optimising your <span style="color: #6f77f1">Website</span>
+      </p>
+      <p class="heading-caption col-lg-6">
         It is a long established fact that a reader will be distracted by the
         readable content of a page when It is a long .
       </p>
-      <div class="container mt-5">
+      <div class="container mt-5 container-inside">
         <div
-          class="row d-flex gap-3 justify-content-center justify-content-lg-between"
+          class="optimise-row row d-flex justify-content-center justify-content-lg-between"
         >
-          <div
-            class="card border-0 col-md-3 col-12"
-            style="width: 19rem; height: 15rem"
-          >
+          <div class="card border-0 col-md-3 col-12 optimise-card">
             <div class="card-body">
               <div class="d-flex flex-column align-items-start">
-                <img
-                  src="./assets/images/Group 673.png"
-                  style="width: 60px; height: 70px"
-                />
+                <img src="./assets/images/Group 673.png" />
                 <h5 class="card-title">Keyword Research</h5>
               </div>
 
-              <p class="card-text">
+              <p class="card-text optimise-text">
                 It is a long established fact that a reader will be distracted
-                by the readable content .It is a long established fact that .
+                by the readable content hed fact that .
               </p>
             </div>
           </div>
@@ -222,10 +216,7 @@
           >
             <div class="card-body">
               <div class="d-flex flex-column align-items-start">
-                <img
-                  src="./assets/images/Group 674.png"
-                  style="width: 60px; height: 70px"
-                />
+                <img src="./assets/images/Group 674.png" />
                 <h5 class="card-title">Content Optimisation</h5>
               </div>
 
@@ -241,17 +232,13 @@
           >
             <div class="card-body">
               <div class="d-flex flex-column gap-2 align-items-start">
-                <img
-                  src="./assets/images/Group 676.png"
-                  style="width: 60px; height: 70px"
-                  class=""
-                />
+                <img src="./assets/images/Group 676.png" />
                 <h5 class="card-title">Target Analysis</h5>
               </div>
 
               <p class="card-text">
                 It is a long established fact that a reader will be distracted
-                by the readable content .It is a long established fact that .
+                by the readab .
               </p>
             </div>
           </div>
@@ -278,29 +265,24 @@
         </div>
       </div>
     </section>
-    <div
-      class="container-fluid mt-3"
-      style="
-        background-image: url('./assets/images/Group\ 678.svg');
-        background-size: cover;
-        background-position: center;
-      "
-    >
-      <div class="row row-cols-1 row-cols-lg-2 justify-content-center">
-        <div class="col-lg-5">
-          <h2>
+    <div class="container-fluid mt-3 solution-div">
+      <div
+        class="solution-row row row-cols-1 row-cols-lg-2 justify-content-center"
+      >
+        <div class="solution-col-1 col-lg-5">
+          <p class="solution-heading-text">
             Perfect Solution For<br />
             Your
-            <span style="color: #6f77f1">Business</span>
-          </h2>
-          <p>
+            <span class="solution-heading-highlight">Business</span>
+          </p>
+
+          <p class="solution-heading-caption">
             It is a long established fact that a reader will be distracted by
             the It is a long established .t is a long established fact that a
             reader will be distracted by the readable content of .
           </p>
           <button
-            class="btn btn-warning rounded-1 px-lg-3 border-0 mt-lg-4"
-            style="font-size: 24px; font-weight: 400"
+            class="solution-btn btn btn-warning rounded-1 px-lg-3 border-0 mt-lg-4"
           >
             Learn More
           </button>
@@ -313,9 +295,9 @@
         </div>
       </div>
     </div>
-    <div class="container mt-5">
+    <div class="container mt-5 business-container justify-content-between">
       <div
-        class="row d-flex gap-3 justify-content-center justify-content-lg-around"
+        class="business-row row d-flex gap-3 justify-content-center justify-content-lg-around"
       >
         <div
           class="card border-0 col-md-3 col-12"
@@ -530,14 +512,17 @@
           <h2 class="display-4 text-secondary">86</h2>
           <p class="text-muted">Happy Clients</p>
         </div>
+
         <div class="col-md-2">
           <h2 class="display-4 text-secondary">118</h2>
           <p class="text-muted">Projects Done</p>
         </div>
+        <div class="col-1"></div>
         <div class="col-md-2">
           <h2 class="display-4 text-secondary">6+</h2>
           <p class="text-muted">Years Of Experience</p>
         </div>
+        <div class="col-1"></div>
         <div class="col-md-2">
           <h2 class="display-4 text-secondary">14</h2>
           <p class="text-muted">National Awards</p>
